kubernetes/apps/renovate/renovate-operator/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: renovate-operator
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  hostnames:
    - "renovate.int.${REGION}.${ENVIRONMENT}.${DOMAIN}"
  parentRefs:
    - name: traefik-private
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: renovate-operator
          port: 8081
